--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -20,6 +20,10 @@
   &.large {
     height: 380px;
   }
+  .background-image {
+    width: 100%;
+    height: 100%;
+  }
   .content {
     height: 90px;
     padding: 0 25px;
@@ -30,6 +34,7 @@
     border: 1px solid black;
     background-color: white;
     opacity: 0.7;
+    position: absolute;
 
     .title {
       font-weight: bold;
