--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -9,6 +9,18 @@
   margin: 0 7.5px 15px;
   background-position: center;
   background-size: cover;
+  overflow: hidden;
+
+  &:hover {
+    cursor: pointer;
+    .background-image {
+      transform: scale(1.1);
+      transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+    }
+    .content {
+      opacity: 0.9;
+    }
+  }
 
   &:first-child {
     margin-right: 7.5px;
