--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,7 +1,8 @@
 .custom-button {
   min-width: 165px;
-  width: auto;
+  width: 100%;
   height: 50px;
+  display: block;
   letter-spacing: 0.5px;
   line-height: 50px;
   padding: 0 35px 0 35px;
@@ -19,5 +20,14 @@
     background-color: white;
     color: black;
     border: 1px solid black;
+  }
+  &.google-sign-in {
+    background-color: #4285f4;
+    color: white;
+    margin-top: 20px;
+    &:hover {
+      background-color: #357ae8;
+      border: none;
+    }
   }
 }
