--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -20,6 +20,13 @@
 
     .option {
       padding: 10px 15px;
+      cursor: pointer;
+      &:hover {
+        font-weight: 700;
+      }
     }
+  }
+  .user-container {
+    display: flex;
   }
 }
