--- a/src/pages/userpage/userpage.styles.scss
+++ b/src/pages/userpage/userpage.styles.scss
@@ -10,4 +10,8 @@
     border-radius: 100px;
     margin-bottom: 50px;
   }
+  .profilePicture {
+    max-width: 150px;
+    border-radius: 30px;
+  }
 }
