--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -28,5 +28,10 @@
   }
   .user-container {
     display: flex;
+    align-items: center;
+  }
+  .userLink img {
+    border-radius: 100px;
+    max-width: 50px;
   }
 }
